--- a/styles_v1.css
+++ b/styles_v1.css
@@ -1,6 +1,6 @@
-﻿        html {
-            /* overflow:hidden; */
-        }
+﻿html, body {
+    overscroll-behavior-x: none;
+}
 
 body {
     margin: 0;
