+ai node auto mode -halt checkbox
+ai node auto mode checkbox
+ ai node self prompt rendering
- remove ai node halt checkbox
- clean up zettelkasten auto mode
- ensure halt all connected ai nodes when halting a responding ai node.
- ensure  exitConversation disconnects connected ai nodes.

--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -2700,6 +2700,7 @@ input[type=range] {
     height: 550px;
     width: 500px;
     position: relative;
+    margin-right: 2px;
 }
 
 .ai-response-div {
