--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -4086,21 +4086,26 @@ code.language-markdown {
     color: #8c7474; /* Example: slightly different red */
 }
 
+.number-input-wrapper {
+    display: flex;
+    align-items: baseline;
+}
+
+.number-input-wrapper:hover .number-input {
+    background-color: #18181c;
+    border: none;
+    outline: none;
+}
+
+.number-input-wrapper:focus .number-input {
+    background-color: #18181c;
+    border: none;
+    outline: none;
+}
+
 .number-input {
     background-color: #222226;
-    width: fit-content;
-    border: none;
-}
-
-.number-input:focus {
-    background-color: #18181c;
+    width: 100%;
     border: none;
     outline: none;
 }
-
-.number-input:hover {
-    background-color: #18181c;
-    border: none;
-    outline: none;
-}
-
